# OpenFaxFormat

./: .gitignore  README.md
Implementation/: README.md  meson.build  meson.build~
Implementation/src/: meson.build  meson.build~
Implementation/src/Client/: Application.vala~  meson.build
Implementation/src/Client/structures/: ColorMessage.vala  FileMessenger.vala  Messenger.vala  NetworkMessenger.vala~  PDFSource.vala  PDFSource.vala~  SizeMessage.vala~
Implementation/src/Client/widgets/: FileChooser.vala  FileChooser.vala~  IPEntry.vala  MainWindow.vala  SendButton.vala  SendButton.vala~  Switch.vala  Switch.vala~
Implementation/src/Server/: Application.vala  meson.build  meson.build~
Implementation/src/Server/structures/: ColorMessage.vala  DrawCommand.vala  FileMessenger.vala  FileReader.vala  Message.vala  Messenger.vala  NetworkMessenger.vala  PDFSource.vala  SizeMessage.vala  VersionMessage.vala
Implementation/src/Server/widgets/: DrawingArea.vala  IPEntry.vala  MainWindow.vala
Specification/: Client Server.html  Client Server.md  Open Fax Specification.html  Open Fax Specification.md
Tests/: base64_encode_decode.vala  decompress  decompress.vala  simple_server.py  test  test.c
